--- a/Capstone4/Capstone4.csproj
+++ b/Capstone4/Capstone4.csproj
@@ -68,6 +68,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="code.js" />
+    <Content Include="shoppinglist.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
